# REINFORCEMENT-LEARNING-2025

./: README.md  q_learn.ipynb
rl-labs-nao/: .gitignore  AdditonalGuide.docx  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
rl-labs-nao/bridge/: README.md
rl-labs-nao/bridge/py27_nao_service/: nao_actions.py  requirements.txt  server.py
rl-labs-nao/bridge/py311_client/: send_action.py
rl-labs-nao/common/: __init__.py  mdp.py  policies.py
rl-labs-nao/env/: create_env.ps1  create_env.sh
rl-labs-nao/example scripts/: nao_say.py
rl-labs-nao/labs/00_setup_environment/: 00_setup_environment.ipynb  README.md
rl-labs-nao/labs/01_multiarmed_bandits/: 01_multiarmed_bandits.ipynb  README.md
rl-labs-nao/labs/02_mdp_and_policy_evaluation/: 02_mdp_and_policy_evaluation.ipynb  README.md
rl-labs-nao/labs/03_dynamic_programming_pi_vi/: 03_dynamic_programming_pi_vi.ipynb  README.md
rl-labs-nao/labs/04_monte_carlo_prediction_control/: 04_monte_carlo_prediction_control.ipynb  README.md
rl-labs-nao/labs/05_td_learning_sarsa_expected/: 05_td_learning_sarsa_expected.ipynb  README.md
rl-labs-nao/labs/06_q_learning_tabular/: 06_q_learning_tabular.ipynb  README.md
rl-labs-nao/labs/07_double_q_learning/: 07_double_q_learning.ipynb  README.md
rl-labs-nao/labs/08_function_approximation_dqn_intro/: 08_function_approximation_dqn_intro.ipynb  README.md
rl-labs-nao/labs/09_stable_baselines3_basics/: 09_stable_baselines3_basics.ipynb  README.md
rl-labs-nao/labs/10_nao_in_the_loop_control/: README.md  (+1 more)
rl-labs-nao/pynaoqipackage/: ext.py
(+45 files in other folders)
