[metadata]
name = rl-labs-nao
version = 0.1.0
description = Reinforcement Learning Labs with NAO Integration
license = MIT

[options]
packages = find:
install_requires =
    gymnasium==0.29.1
    stable-baselines3==2.3.2
    numpy==1.26.4
    matplotlib==3.8.2
    scipy==1.11.4
    tqdm==4.66.1
    requests==2.31.0
    PyYAML==6.0.1
    torch==2.1.2
python_requires = >=3.11
include_package_data = True

[options.packages.find]
where = rl-labs-nao

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,*.egg-info

[tool:pytest]
testpaths = labs/03_dynamic_programming_pi_vi/solutions/tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
